product-service-service.yaml
# product-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: shop-namespace
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
